# duma-portfolio

./: .env  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/routes/: configs.py  github.py  keybinds.py
app/core/: github_client.py
app/models/: keybind.py
app/parsers/: base.py  hyprland_parser.py  markdown_keybinds.py  skhd_parser.py
app/services/: config_service.py  github_service.py  keybind_service.py
app/templates/: about.html  base.html  gallery.html  index.html  projects.html
app/templates/dotfiles/: configs.html  index.html  keybinds.html  platform.html
app/templates/partials/: about.html  footer.html  nav.html
static/css/: terminal.css
static/js/: keyboard.js  particles.js  terminal.js
